# Freyja

InterfaceLibrary/: CMakeLists.txt  toolChain.cmake
InterfaceLibrary/cmake_modules/: artifactory.cmake
InterfaceLibrary/gtest/: CMakeLists.txt  TestInterfaceLibrary.cpp  mockDLWrapper.h  mockInterfaceLibrary.h  mockModuleRegister.h
InterfaceLibrary/include/: IfLibContainer.h  InterfaceLibrary.h  InterfaceLibraryDLWrapper.h  InterfaceLibraryException.h  InterfaceModuleLoader.h  InterfaceModuleLoaderMonitor.h  InterfaceModuleLoaderMonitorThread.h  InterfaceSemanticVersionChecker.h  InterfaceVersion.h  UnknownInterface.h
InterfaceLibrary/include/impl/: DLWrapperImpl.h  InterfaceLibraryImpl.h
InterfaceLibrary/scripts/: generateInterfaceChecksum.sh  generateInterfaceChecksum.sh~
InterfaceLibrary/src/: IfLibContainer.cpp  InterfaceLibraryException.cpp  InterfaceModuleLoader.cpp  InterfaceModuleLoaderMonitor.cpp  InterfaceModuleLoaderMonitorThread.cpp  InterfaceSemanticVersionChecker.cpp  InterfaceVersion.cpp
InterfaceLibrary/src/impl/: DLWrapperImpl.cpp  InterfaceLibraryImpl.cpp
freyja/: CMakeLists.txt
freyja/cmake_modules/: utils.cmake
freyja/src/: main.cpp
